# dig-open-data

./: .gitignore  README.md  pyproject.toml
r/digOpenData/: DESCRIPTION  LICENSE  NAMESPACE
r/digOpenData/R/: cache.R  listing.R  open.R  s3.R
r/digOpenData/man/: cache.Rd  listing.Rd  open.Rd
r/digOpenData/tests/: testthat.R
r/digOpenData/tests/testthat/: test-basic.R  test-s3-xml.R
src/dig_open_data/: __init__.py  api.py  backends.py  cache.py  catalog.py  cli.py  streams.py
tests/: test_catalog.py  test_cli.py  test_open_text.py  test_retry.py  test_retry_open_text.py
